--- a/buyer-profile-new-address.html
+++ b/buyer-profile-new-address.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
-<body>
+<body> 
     <header class="bg-[#F7F7F5]">
         <nav class="navbar navbar__main  navbar-expand-lg navbar-default">
             <div class=" container-1440">
@@ -240,10 +240,10 @@
                             <li class="group">
                                 <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Referral History</a>
                             </li>
-                            <li class="group active">
+                            <li class="group">
                                 <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Order History</a>
                             </li>
-                            <li class="group">
+                            <li class="group active">
                                 <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">My Addresses</a>
                             </li>
                             <li class="group">
@@ -271,88 +271,33 @@
                     </div>
                 </div>
                 <div class="right_part_wraper flex-1">
-                    <h2 class="page_title dm-serif text-[2rem] leading-[1] tracking-[-0.4px] color-[#272833] mb-[48px] flex justify-between"><span>Order History</span> <span class="cursor-pointer md:hidden font-[500] text-[1rem]" id="buyer_profile_sidebar_menu_icon"><i class="fa-solid fa-bars"></i></span></h2>
-                    <div class="order_history_part_wraper flex flex-col gap-[30px]">
-                        <div class="order_history_part flex-1 pb-[10px] border-b-[1px] border-[#E6E6E4]">
-                            <div class="title text-[#4B4B51] uppercase mb-5 flex justify-between">
-                                <span>ORDER #21412</span>
-                                <span><a href="#/" class="font-[600] text-color4 normal-case">View Details</a></span>
+                    <h2 class="page_title dm-serif text-[2rem] leading-[1] tracking-[-0.4px] color-[#272833] mb-[48px] flex justify-between"><span>New Addresses</span> <span class="cursor-pointer md:hidden font-[500] text-[1rem]" id="buyer_profile_sidebar_menu_icon"><i class="fa-solid fa-bars"></i></span></h2>
+                    <div class="my_new_address_wraper_part">
+                        <form action="#" class="grid gap-[30px] md:grid-cols-3">
+                            <div class="input_wraper  border-b-[1px] border-[#EBEAE6] pb-[16px]">
+                                <label for="address_title" class="text-[#02030680] text-[0.75rem] leading-[1.4]">Address Line 1</label>  
+                                <input type="text" id="address_title" class="w-full font-[600] text-[#020306] text-[1rem] leaading-[1.25] mt-[4px] focus:outline-none placeholder:text-[#020306]" placeholder="Oral Lake Road 89">
                             </div>
-                            <div class="order_history_detials max-w-[450px] flex flex-col gap-[8px]">
-                                <div class="flex justify-between gap-[20px]"> 
-                                    <div class="property font-[600] text-[#A5A6AE] tracking-[-0.2px]">Placed On:</div>
-                                    <div class="value font-[600] text-[#272833]">23rd of January</div>
-                                </div>
-                                <div class="flex justify-between gap-[20px]"> 
-                                    <div class="property font-[600] text-[#A5A6AE] tracking-[-0.2px]">Amount:</div>
-                                    <div class="value font-[600] text-[#272833]">£230.99</div>
-                                </div>
-                                <div class="flex justify-between gap-[20px]"> 
-                                    <div class="property font-[600] text-[#A5A6AE] tracking-[-0.2px]">Status:</div>
-                                    <div class="value font-[600] text-[#169B1A]">Mark as delivered</div>
-                                </div>
+                            <div class="input_wraper  border-b-[1px] border-[#EBEAE6] pb-[16px]">
+                                <label for="address_title" class="text-[#02030680] text-[0.75rem] leading-[1.4]">Address Line 2</label>  
+                                <input type="text" id="address_title" class="w-full font-[600] text-[#020306] text-[1rem] leaading-[1.25] mt-[4px] focus:outline-none placeholder:text-[#020306]" placeholder="Oral Lake Road 89">
                             </div>
-                        </div>
-                        <div class="order_history_part flex-1 pb-[10px] border-b-[1px] border-[#E6E6E4]">
-                            <div class="title text-[#4B4B51] uppercase mb-5 flex justify-between">
-                                <span>ORDER #21412</span>
-                                <span><a href="#/" class="font-[600] text-color4 normal-case">View Details</a></span>
+                            <div class="input_wraper  border-b-[1px] border-[#EBEAE6] pb-[16px]">
+                                <label for="address_title" class="text-[#02030680] text-[0.75rem] leading-[1.4]">City</label>  
+                                <input type="text" id="address_title" class="w-full font-[600] text-[#020306] text-[1rem] leaading-[1.25] mt-[4px] focus:outline-none placeholder:text-[#020306]" placeholder="Oral Lake Road 89">
                             </div>
-                            <div class="order_history_detials max-w-[450px] flex flex-col gap-[8px]">
-                                <div class="flex justify-between gap-[20px]"> 
-                                    <div class="property font-[600] text-[#A5A6AE] tracking-[-0.2px]">Placed On:</div>
-                                    <div class="value font-[600] text-[#272833]">23rd of January</div>
-                                </div>
-                                <div class="flex justify-between gap-[20px]"> 
-                                    <div class="property font-[600] text-[#A5A6AE] tracking-[-0.2px]">Amount:</div>
-                                    <div class="value font-[600] text-[#272833]">£230.99</div>
-                                </div>
-                                <div class="flex justify-between gap-[20px]"> 
-                                    <div class="property font-[600] text-[#A5A6AE] tracking-[-0.2px]">Status:</div>
-                                    <div class="value font-[600] text-[#169B1A]">Mark as delivered</div>
-                                </div>
+                            <div class="input_wraper  border-b-[1px] border-[#EBEAE6] pb-[16px]">
+                                <label for="address_title" class="text-[#02030680] text-[0.75rem] leading-[1.4]">Country </label>  
+                                <input type="text" id="address_title" class="w-full font-[600] text-[#020306] text-[1rem] leaading-[1.25] mt-[4px] focus:outline-none placeholder:text-[#020306]" placeholder="Oral Lake Road 89">
                             </div>
-                        </div>
-                        <div class="order_history_part flex-1 pb-[10px] border-b-[1px] border-[#E6E6E4]">
-                            <div class="title text-[#4B4B51] uppercase mb-5 flex justify-between">
-                                <span>ORDER #21412</span>
-                                <span><a href="#/" class="font-[600] text-color4 normal-case">View Details</a></span>
+                            <div class="input_wraper  border-b-[1px] border-[#EBEAE6] pb-[16px]">
+                                <label for="address_title" class="text-[#02030680] text-[0.75rem] leading-[1.4]">Postcode</label>  
+                                <input type="text" id="address_title" class="w-full font-[600] text-[#020306] text-[1rem] leaading-[1.25] mt-[4px] focus:outline-none placeholder:text-[#020306]" placeholder="Oral Lake Road 89">
                             </div>
-                            <div class="order_history_detials max-w-[450px] flex flex-col gap-[8px]">
-                                <div class="flex justify-between gap-[20px]"> 
-                                    <div class="property font-[600] text-[#A5A6AE] tracking-[-0.2px]">Placed On:</div>
-                                    <div class="value font-[600] text-[#272833]">23rd of January</div>
-                                </div>
-                                <div class="flex justify-between gap-[20px]"> 
-                                    <div class="property font-[600] text-[#A5A6AE] tracking-[-0.2px]">Amount:</div>
-                                    <div class="value font-[600] text-[#272833]">£230.99</div>
-                                </div>
-                                <div class="flex justify-between gap-[20px]"> 
-                                    <div class="property font-[600] text-[#A5A6AE] tracking-[-0.2px]">Status:</div>
-                                    <div class="value font-[600] text-[#169B1A]">Mark as delivered</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="order_history_part flex-1 pb-[10px] border-b-[1px] border-[#E6E6E4]">
-                            <div class="title text-[#4B4B51] uppercase mb-5 flex justify-between">
-                                <span>ORDER #21412</span>
-                                <span><a href="#/" class="font-[600] text-color4 normal-case">View Details</a></span>
-                            </div>
-                            <div class="order_history_detials max-w-[450px] flex flex-col gap-[8px]">
-                                <div class="flex justify-between gap-[20px]"> 
-                                    <div class="property font-[600] text-[#A5A6AE] tracking-[-0.2px]">Placed On:</div>
-                                    <div class="value font-[600] text-[#272833]">23rd of January</div>
-                                </div>
-                                <div class="flex justify-between gap-[20px]"> 
-                                    <div class="property font-[600] text-[#A5A6AE] tracking-[-0.2px]">Amount:</div>
-                                    <div class="value font-[600] text-[#272833]">£230.99</div>
-                                </div>
-                                <div class="flex justify-between gap-[20px]"> 
-                                    <div class="property font-[600] text-[#A5A6AE] tracking-[-0.2px]">Status:</div>
-                                    <div class="value font-[600] text-[#169B1A]">Mark as delivered</div>
-                                </div>
-                            </div>
-                        </div>
+                        </form>
+                    </div>
+                    <div class="add_new_address_btn mt-[17px]">
+                        <a href="./buyer-profile-new-address.html" class="bg-color4 px-[24px] py-[12px] font-[400] text-[#000000] text-[.875rem] leading-[2] tracking-[1.5px] uppercase">add another address</a>
                     </div>
                 </div>
             </div>
