--- a/buyer-payment-method.html
+++ b/buyer-payment-method.html
@@ -238,42 +238,42 @@
                         </div>
                         <ul class="side_menu mt-4 flex flex-col gap-6">
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Referral History</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Referral History</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Order History</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Order History</a>
+                            </li>
+                            <li class="group">
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">My Addresses</a>
                             </li>
                             <li class="group active">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">My Addresses</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Payment Method</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Payment Method</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Bookings</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Bookings</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Nearby Sellers</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Nearby Sellers</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Favourites</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Favourites</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Settings</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Settings</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Help & Support</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Help & Support</a>
-                            </li>
-                            <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Logout</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Logout</a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="right_part_wraper flex-1">
                     <h2 class="page_title dm-serif text-[2rem] leading-[1] tracking-[-0.4px] color-[#272833] mb-[48px] flex justify-between"><span>Payment Method</span> <span class="cursor-pointer md:hidden font-[500] text-[1rem]" id="buyer_profile_sidebar_menu_icon"><i class="fa-solid fa-bars"></i></span></h2>
-                    <div class="payment_method_wraper_part flex gap-[24px]">
-                        <label for="visa" class="flex-1 max-w-[314px] payment_method px-[16px] py-[20px] rounded-[10px] border-[1px] border-[#0203060D] flex justify-between items-center">
+                    <div class="payment_method_wraper_part flex flex-wrap gap-[24px]">
+                        <label for="visa" class="flex-[1_1_220px] max-w-[314px] payment_method px-[16px] py-[20px] rounded-[10px] border-[1px] border-[#0203060D] flex justify-between items-center">
                             <div class="flex gap-[16px] items-center">
                                 <div class="image">
                                     <img src="./assets/images/visa1.png" alt="">
@@ -285,7 +285,7 @@
                             </div>
                             <input type="radio" name="payment_method" id="visa" class="custom-checkbox style-two">
                         </label>
-                        <label for="mastercard" class="flex-1 max-w-[314px] payment_method px-[16px] py-[20px] rounded-[10px] border-[1px] border-[#0203060D] flex justify-between items-center">
+                        <label for="mastercard" class="flex-[1_1_220px] max-w-[314px] payment_method px-[16px] py-[20px] rounded-[10px] border-[1px] border-[#0203060D] flex justify-between items-center">
                             <div class="flex gap-[16px] items-center">
                                 <div class="image">
                                     <img src="./assets/images/visa1.png" alt="">
@@ -299,7 +299,7 @@
                         </label>
                     </div>
                     <div class="add_new_address_btn mt-[17px]">
-                        <a href="./buyer-profile-new-address.html" class="bg-color4 px-[24px] py-[12px] font-[400] text-[#000000] text-[.875rem] leading-[2] tracking-[1.5px] uppercase">add new payment method</a>
+                        <a href="./buyer-new-payment-method.html" class="bg-color4 text-center px-[24px] py-[12px] font-[400] text-[#000000] text-[.875rem] leading-[2] tracking-[1.5px] uppercase">add new payment method</a>
                     </div>
                 </div>
             </div>
