--- a/buyer-profile-refarrel-history.html
+++ b/buyer-profile-refarrel-history.html
@@ -238,34 +238,34 @@
                         </div>
                         <ul class="side_menu mt-4 flex flex-col gap-6">
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Referral History</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Referral History</a>
                             </li>
                             <li class="group active">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Order History</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Order History</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">My Addresses</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">My Addresses</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Payment Method</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Payment Method</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Bookings</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Bookings</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Nearby Sellers</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Nearby Sellers</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Favourites</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Favourites</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Settings</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Settings</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Help & Support</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Help & Support</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline">Logout</a>
+                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Logout</a>
                             </li>
                         </ul>
                     </div>
