--- a/buyer-payment-method.html
+++ b/buyer-payment-method.html
@@ -274,7 +274,7 @@
                     <h2 class="page_title dm-serif text-[2rem] leading-[1] tracking-[-0.4px] color-[#272833] mb-[48px] flex justify-between"><span>Payment Method</span> <span class="cursor-pointer md:hidden font-[500] text-[1rem]" id="buyer_profile_sidebar_menu_icon"><i class="fa-solid fa-bars"></i></span></h2>
                     <div class="payment_method_wraper_part flex flex-wrap gap-[24px]">
                         <label for="visa" class="flex-[1_1_220px] max-w-[314px] payment_method px-[16px] py-[20px] rounded-[10px] border-[1px] border-[#0203060D] flex justify-between items-center">
-                            <div class="flex gap-[16px] items-center">
+                            <a href="./buyer-my-card-details.html" class="flex gap-[16px] items-center">
                                 <div class="image">
                                     <img src="./assets/images/visa1.png" alt="">
                                 </div>
@@ -282,23 +282,23 @@
                                     <div class="card_number dm-serif text-[#141414] leading-[1]"><span>**** **** **** </span>0213</div>
                                     <div class="exp font-[600] text-[#757575] text-[13px] leading-[1]">Exp: 12/26</div>
                                 </div>
-                            </div>
+                            </a>
                             <input type="radio" name="payment_method" id="visa" class="custom-checkbox style-two">
                         </label>
                         <label for="mastercard" class="flex-[1_1_220px] max-w-[314px] payment_method px-[16px] py-[20px] rounded-[10px] border-[1px] border-[#0203060D] flex justify-between items-center">
-                            <div class="flex gap-[16px] items-center">
+                            <a href="./buyer-my-card-details.html" class="flex gap-[16px] items-center">
                                 <div class="image">
-                                    <img src="./assets/images/visa1.png" alt="">
+                                    <img src="./assets/images/mastercard.png" alt="">
                                 </div>
                                 <div class="text">
                                     <div class="card_number dm-serif text-[#141414] leading-[1]"><span>**** **** **** </span>0213</div>
                                     <div class="exp font-[600] text-[#757575] text-[13px] leading-[1]">Exp: 12/26</div>
                                 </div>
-                            </div>
+                            </a>
                             <input type="radio" name="payment_method" id="mastercard" class="custom-checkbox style-two">
                         </label>
                     </div>
-                    <div class="add_new_address_btn mt-[17px]">
+                    <div class="add_new_address_btn mt-[37px]">
                         <a href="./buyer-new-payment-method.html" class="bg-color4 text-center px-[24px] py-[12px] font-[400] text-[#000000] text-[.875rem] leading-[2] tracking-[1.5px] uppercase">add new payment method</a>
                     </div>
                 </div>
