nearby seller page done

--- a/nearby-seller.html
+++ b/nearby-seller.html
@@ -302,7 +302,18 @@
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M2.794 15.5181C1.50484 14.2907 0.608609 12.7085 0.218639 10.9717C-0.17133 9.23492 -0.0375212 7.42149 0.603146 5.76074C1.24381 4.1 2.36256 2.66652 3.81792 1.6416C5.27328 0.61668 6.99988 0.0463399 8.77938 0.00270542C10.5589 -0.040929 12.3114 0.444102 13.8152 1.39646C15.3191 2.34882 16.5067 3.72574 17.228 5.35309C17.9493 6.98044 18.1718 8.78514 17.8675 10.539C17.5631 12.2928 16.7455 13.917 15.518 15.2061L9.31201 21.7241L2.794 15.5181ZM14.07 13.8271L9.243 18.8971L4.173 14.0701C3.17037 13.1154 2.47334 11.8849 2.17005 10.5341C1.86676 9.18326 1.97084 7.77285 2.46912 6.48119C2.9674 5.18953 3.8375 4.07462 4.96941 3.27746C6.10131 2.4803 7.44418 2.03668 8.8282 2.00269C10.2122 1.96871 11.5752 2.3459 12.7449 3.08655C13.9146 3.8272 14.8383 4.89806 15.3994 6.16371C15.9605 7.42936 16.1336 8.83297 15.897 10.197C15.6604 11.5611 15.0246 12.8244 14.07 13.8271Z" fill="#666562"/>
                                     </svg>
                                 </div>
-                                <input type="text" class="w-full bg-[#FFFFFF] p-[16px] pl-[50px] rounded-[5px] text-[0.875rem] font-[600] leading-[1] text-[#000000] placeholder:text-[#000000]" placeholder="Your Location">
+                                <input type="text" class="w-full bg-[#FFFFFF] py-[16px] pl-[50px] pr-[108px] rounded-[5px] text-[0.875rem] font-[600] leading-[1] text-[#000000] placeholder:text-[#000000]" placeholder="Your Location">
+                                <div class="miles absolute top-[50%] right-[15px] translate-y-[-50%] pl-2 border-l-[1px] border-[#C9DAF2] ">
+                                    <select name="miles" id="miles" class="font-semibold text-[#000000]">
+                                        <option value="0">0 miles</option>
+                                        <option value="1">1 miles</option>
+                                        <option value="2">2 miles</option>
+                                        <option value="3">3 miles</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="btn_wraper">
+                                <a href="javascript:void(0)" class="font-[600] text-[#fff] text-[1rem] leading-[1.5] text-center bg-[#1F3650] p-[11px_42px] rounded-[5px]">Search</a>
                             </div>
                         </form>
                     </div>
