nearby seller page done responsiveness

--- a/nearby-seller.html
+++ b/nearby-seller.html
@@ -217,7 +217,7 @@
     </header>
     <div class="main bg-[#F7F7F5] py-[40px]">
         <div class="container-1440">
-            <div class="nearby_seller_wraper flex lg:gap-[100px] gap-[30px]">
+            <div class="nearby_seller_wraper flex lg:gap-[100px] gap-[30px] flex-col mobilexl:flex-row">
                 <div class="left-part max-w-[325px] flex-1">
                     <h3 class="title_part font-[700] text-[1.125rem] leading-[1.5] tracking-[1px] text-[#1F3650]">Sellers near your location</h3>
                     <div class="seller_wraper flex flex-col gap-[12px] mt-10">
