--- a/buyer-profile-refarrel-history.html
+++ b/buyer-profile-refarrel-history.html
@@ -45,7 +45,7 @@
                         </div>
                         <button class="navbar-toggler md:hidden"><i class="fa-solid fa-bars"></i></button>
                     </div>
-                    <div class="navbar-collapse group md:bg-[transparent] bg-[#fff] hidden opacity-0 md:opacity-100 md:block absolute top-[calc(100%+40px)] left-0 right-0  md:static md:z-auto z-[2] md:transition-none transition-all duration-[.8s] ease-in-out inline-block">
+                    <div class="navbar-collapse group md:bg-[transparent] bg-[#fff] hidden opacity-0 md:opacity-100 md:block absolute top-[calc(100%+40px)] left-0 right-0  md:static md:z-auto z-[2] md:transition-none transition-all duration-[.8s] ease-in-out">
                         <div class="navbar_nav_menu_wraper flex md:flex-row flex-col tracking-[1px] md:gap-y-[9px]  mt:py-[0px] pt-[12px]">
                             <div class="group menu-item menu-item-has-children active relative shrink-0">
                                 <a href="javascript:void(0)" class="mega_menu_trigger px-[12px] relative text-color5 transition-all duration-[.1s]">
@@ -218,7 +218,7 @@
     <div class="main bg-[#FFFFFD] py-[40px]">
         <div class="container-1440">
             <div class="buyer_profile_wraper flex lg:gap-[100px] gap-[30px]">
-                <div class="buyer_profile_menu md:w-[190px] w-[220px] p-[0] p-[24px] md:static md:bg-[#FFFFFD] bg-[#fff] absolute left-[-100%] md:z-auto z-[2] md:transition-none transition-all duration-[.8s] ease-in-out md:shadow-none shadow-[0px_0px_20px_rgba(0,0,0,0.1)]">
+                <div class="buyer_profile_menu md:w-[190px] w-[220px] p-[24px] md:static md:bg-[#FFFFFD] bg-[#fff] absolute left-[-100%] md:z-auto z-[2] md:transition-none transition-all duration-[.8s] ease-in-out md:shadow-none shadow-[0px_0px_20px_rgba(0,0,0,0.1)]">
                     <div class="profile_top_part">
                         <div class="relative buyer_image mx-auto bg-[#E4E4E4] w-[80px] aspect-[1] rounded-full *:rounded-full *:max-w-full *:aspect-[1] flex justify-center items-center">
                             <img src="./assets/images/icon-user.png" alt="buyer">
@@ -237,32 +237,32 @@
                             <span><i class="fa-solid fa-minus"></i></span>
                         </div>
                         <ul class="side_menu mt-4 flex flex-col gap-6">
-                            <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Referral History</a>
-                            </li>
-                            <li class="group active">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Order History</a>
+                            <li class="group  active">
+                                <a href="./buyer-profile-refarrel-history.html" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Referral History</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">My Addresses</a>
+                                <a href="./buyer-order-history.html" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Order History</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Payment Method</a>
+                                <a href="./buyer-profile-my-address.html" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">My Addresses</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Bookings</a>
+                                <a href="./buyer-payment-method.html" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Payment Method</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Nearby Sellers</a>
+                                <a href="./buyer-bookings.html" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Bookings</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Favourites</a>
+                                <a href="./nearby-seller.html" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Nearby Sellers</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Settings</a>
+                                <a href="./buyer-profile-favourites.html" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Favourites</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Help & Support</a>
+                                <a href="./buyer-profile-settings.html" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Settings</a>
+                            </li>
+                            <li class="group">
+                                <a href="./buyer-help-support.html" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Help & Support</a>
                             </li>
                             <li class="group">
                                 <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Logout</a>
