--- a/buyer-profile-settings.html
+++ b/buyer-profile-settings.html
@@ -238,31 +238,31 @@
                         </div>
                         <ul class="side_menu mt-4 flex flex-col gap-6">
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Referral History</a>
+                                <a href="./buyer-profile-refarrel-history.html" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Referral History</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Order History</a>
+                                <a href="./buyer-order-history.html" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Order History</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">My Addresses</a>
+                                <a href="./buyer-profile-my-address.html" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">My Addresses</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Payment Method</a>
+                                <a href="./buyer-payment-method.html" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Payment Method</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Bookings</a>
+                                <a href="./buyer-bookings.html" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Bookings</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Nearby Sellers</a>
+                                <a href="./nearby-seller.html" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Nearby Sellers</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Favourites</a>
+                                <a href="./buyer-profile-favourites.html" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Favourites</a>
                             </li>
                             <li class="group active">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Settings</a>
+                                <a href="./buyer-profile-settings.html" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Settings</a>
                             </li>
                             <li class="group">
-                                <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Help & Support</a>
+                                <a href="./buyer-help-support.html" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Help & Support</a>
                             </li>
                             <li class="group">
                                 <a href="#/" class="text-color11 text-[1rem] leading-[1.25] tracking-[-0.1px] group-[.active]:text-[#1F3650] group-[.active]:underline group-[.active]:font-[600]">Logout</a>
