message right part top bar

--- a/message_chatiing.html
+++ b/message_chatiing.html
@@ -299,7 +299,24 @@
                         </div>
                     </div>
                 </div>
-                
+                <div class="show_massege_part p-[20px] flex-1">
+                    <div class="top_part px-[8px] pb-[12px] border-b border-[#F1F5F9]">
+                        <div class="open_sender_info flex gap-[12px] items-center justify-between">
+                            <div class="flex items-center gap-[12px]">
+                                <div class="img w-10 h-10 rounded-full *:w-full *:h-full *:object-cover overflow-hidden bg-[#C4C4C4]">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="text">
+                                    <div class="name font-semibold text-[#1E293B] text-[1rem] leading-[1.5]">Pretty Pixie</div>
+                                    <div class="date text-color11 mt-2">May 27, 2025 &mdash; 10.45</div>
+                                </div>
+                            </div>
+                            <div class="del_icon">
+                                <button><img src="./assets/images/delete_icon.svg" alt="del"></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
